@@ -1,11 +1,15 @@
 package net.samagames.hydroangeas.client.servers;
 
+import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
 import net.samagames.hydroangeas.client.HydroangeasClient;
 import net.samagames.hydroangeas.client.tasks.ServerThread;
 import net.samagames.hydroangeas.common.protocol.intranet.MinecraftServerIssuePacket;
 import net.samagames.hydroangeas.common.protocol.intranet.MinecraftServerOrderPacket;
 import net.samagames.hydroangeas.utils.MiscUtils;
+import org.apache.commons.io.FileDeleteStrategy;
+import org.apache.commons.io.FileUtils;
 
 import java.io.File;
 import java.io.IOException;
@@ -23,14 +27,19 @@ public class MinecraftServerC
     private String map;
     private int minSlot;
     private int maxSlot;
-    private JsonElement options;
+    private JsonElement options, startupOptions;
     private int port;
+
+    private String templateID;
 
     private Integer hubID;
 
     private int weight;
 
     private ServerThread serverThread;
+
+    private long timeToLive = 14400000L;
+    private long startedTime;
 
     public MinecraftServerC(HydroangeasClient instance, MinecraftServerOrderPacket serverInfos, int port)
     {
@@ -43,22 +52,35 @@ public class MinecraftServerC
 
         this.game = serverInfos.getGame();
         this.map = serverInfos.getMap();
+        this.templateID = serverInfos.getTemplateID();
         this.minSlot = serverInfos.getMinSlot();
         this.maxSlot = serverInfos.getMaxSlot();
 
         options = serverInfos.getOptions();
+        startupOptions = serverInfos.getStartupOptions();
+
+        this.timeToLive = serverInfos.getTimeToLive();
+        this.startedTime = serverInfos.getStartedTime();
 
         this.serverFolder = new File(this.instance.getServerFolder(), serverInfos.getServerName());
+        try
+        {
+            FileDeleteStrategy.FORCE.delete(serverFolder);
+            FileUtils.forceDeleteOnExit(serverFolder);
+        } catch (IOException e)
+        {
+            this.instance.getLogger().warning(serverFolder + " will not be able to be deleted during JVM shutdown!");
+        }
         this.port = port;
 
-        this.weight = MiscUtils.calculServerWeight(game, maxSlot, isCoupaingServer());
+        this.weight = serverInfos.getWeight();
     }
 
     public boolean makeServer()
     {
         try
         {
-            this.serverFolder.mkdir();
+            FileUtils.forceMkdir(serverFolder);
             this.instance.getResourceManager().downloadServer(this, this.serverFolder);
             this.instance.getResourceManager().downloadMap(this, this.serverFolder);
             this.instance.getResourceManager().downloadDependencies(this, this.serverFolder);
@@ -67,7 +89,14 @@ public class MinecraftServerC
             this.instance.log(Level.SEVERE, "Can't make the server " + getServerName() + "!");
             instance.getConnectionManager().sendPacket(new MinecraftServerIssuePacket(this.instance.getClientUUID(), this.getServerName(), MinecraftServerIssuePacket.Type.MAKE));
             e.printStackTrace();
-            serverFolder.delete();
+            try
+            {
+                FileDeleteStrategy.FORCE.delete(serverFolder);
+                FileUtils.forceDeleteOnExit(serverFolder);
+            } catch (IOException e1)
+            {
+                e1.printStackTrace();
+            }
             return false;
         }
 
@@ -78,7 +107,13 @@ public class MinecraftServerC
         {
             instance.getConnectionManager().sendPacket(new MinecraftServerIssuePacket(this.instance.getClientUUID(), this.getServerName(), MinecraftServerIssuePacket.Type.PATCH));
             e.printStackTrace();
-            serverFolder.delete();
+            try
+            {
+                FileUtils.forceDelete(serverFolder);
+            } catch (IOException e1)
+            {
+                e1.printStackTrace();
+            }
             return false;
         }
 
@@ -89,23 +124,24 @@ public class MinecraftServerC
     {
         try
         {
+            JsonObject startupOptionsObj = startupOptions.getAsJsonObject();
             serverThread = new ServerThread(this,
                     new String[]{"java",
-                            "-Xmx1152M",
-                            "-Xms512M",
-                            "-Xmn256M",
-                            "-XX:-OmitStackTraceInFastThrow",
-                            "-XX:SurvivorRatio=2",
-                            "-XX:-UseAdaptiveSizePolicy",
-                            "-XX:+UseConcMarkSweepGC",
-                            "-XX:+CMSConcurrentMTEnabled",
-                            "-XX:+CMSParallelRemarkEnabled",
-                            "-XX:+CMSParallelSurvivorRemarkEnabled",
-                            "-XX:CMSMaxAbortablePrecleanTime=10000",
-                            "-XX:+UseCMSInitiatingOccupancyOnly",
-                            "-XX:CMSInitiatingOccupancyFraction=63",
-                            "-XX:+UseParNewGC",
-                            "-Xnoclassgc",
+                            "-Xmx" + startupOptionsObj.get("maxRAM").getAsString(),
+                            "-Xms" + startupOptionsObj.get("minRAM").getAsString(),
+                            "-Xmn" + startupOptionsObj.get("edenRAM").getAsString(),
+                            "-XX:+UseG1GC",
+                            "-XX:+UnlockExperimentalVMOptions",
+                            "-XX:MaxGCPauseMillis=50",
+                            "-XX:+DisableExplicitGC",
+                            "-XX:G1HeapRegionSize=4M",
+                            "-XX:TargetSurvivorRatio=90",
+                            "-XX:G1NewSizePercent=50",
+                            "-XX:G1MaxNewSizePercent=80",
+                            "-XX:InitiatingHeapOccupancyPercent=10",
+                            "-XX:G1MixedGCLiveThresholdPercent=50",
+                            "-XX:+AggressiveOpts",
+                            "-XX:+UseLargePagesInMetaspace",
                             "-jar", "spigot.jar", "nogui"},
                     new String[]{""}, serverFolder);
             serverThread.start();
@@ -114,7 +150,14 @@ public class MinecraftServerC
         {
             this.instance.log(Level.SEVERE, "Can't start the server " + getServerName() + "!");
             e.printStackTrace();
-            serverFolder.delete();
+            try
+            {
+                FileDeleteStrategy.FORCE.delete(serverFolder);
+                FileUtils.forceDelete(serverFolder);
+            } catch (IOException e1)
+            {
+                e1.printStackTrace();
+            }
 
             return false;
         }
@@ -126,17 +169,21 @@ public class MinecraftServerC
     {
         try
         {
-            //this.instance.getLinuxBridge().mark2Stop(getServerName());
             serverThread.forceStop();
+            FileUtils.forceDelete(serverFolder);
         } catch (Exception e)
         {
             this.instance.log(Level.SEVERE, "Can't stop the server " + getServerName() + "!");
             e.printStackTrace();
-            serverFolder.delete();
-
+            try
+            {
+                FileUtils.forceDelete(serverFolder);
+            } catch (IOException e1)
+            {
+                e1.printStackTrace();
+            }
             return false;
         }
-
         return true;
     }
 
@@ -172,7 +219,7 @@ public class MinecraftServerC
 
     public String getServerName()
     {
-        return this.game + "_" + ((hubID == null)?this.uuid.toString().split("-")[0]: hubID);
+        return this.game + "_" + ((hubID == null) ? this.uuid.toString().split("-")[0] : hubID);
     }
 
     public int getMinSlot()
@@ -200,11 +247,33 @@ public class MinecraftServerC
         return instance;
     }
 
-    public boolean isHub() {
+    public boolean isHub()
+    {
         return hubID != null;
     }
 
-    public Integer getHubID() {
+    public Integer getHubID()
+    {
         return hubID;
+    }
+
+    public String getTemplateID() {
+        return templateID;
+    }
+
+    public long getTimeToLive() {
+        return timeToLive;
+    }
+
+    public void setTimeToLive(long timeToLive) {
+        this.timeToLive = timeToLive;
+    }
+
+    public long getStartedTime() {
+        return startedTime;
+    }
+
+    public void setStartedTime(long startedTime) {
+        this.startedTime = startedTime;
     }
 }
